# spacemit-k1-edge-ai-risk-robot

./: .gitignore  LICENSE  README.en.md  README.md  SUBMISSION.md
configs/: action_semantics.yaml  arm_b_no_load_sample_v0_candidate.json  arm_discrete_clearance_config.json  arm_safety_config.json  k1_pwm7_50hz_overlay.dts  local_llm_config.yaml  primitive_registry.yaml  risk_classes.yaml  risk_detection_backends.yaml  rl_action_space.yaml  sop_knowledge_base.json
demo/: README.md
docs/: OPEN_SOURCE_SCOPE.md  arm_b0_serial_dryrun_gate_validation_20260630.md  arm_b1_send_home_once_validation_20260630.md  arm_b2_b3_no_load_validation_20260630.md  arm_b_no_load_dry_run_safety_plan_20260629.md  arm_bus_servo_protocol_audit_20260630.md  arm_c0_map_to_arm_dryrun_20260630.md  arm_c1_base_zero_evidence_20260630.md  arm_c1_hardware_gate_script_design_20260630.md  arm_c1_live_base_zero_precheck_20260630.md  arm_c1_map_gated_no_load_validation_20260630.md  arm_d_clearance_staging_20260701.md  arm_ros_bus_servo_protocol_20260630.md  autonomous_inspection_full_flow_20260725.md  autonomous_mapping_progress_20260711.md  bringup_commands.md  bus_servo_controller.md  c30d_pid_continuous_mapping_tuning_2026-06-26.md  competition_completion_plan_20260701.md  competition_final_component_design_20260701.md  competition_gap_analysis_20260630.md  d435_dataset_collection_workflow_20260701.md  d435_realsense.md  discrete_arm_clearance_implementation_audit_20260723.md  evidence_manifest_20260629.md  final_demo_plan_20260630.md  guarded_auto_mapping_micro_20260628.md  hazard_scene_simulation_plan_2026-06-25.md  k1_current_operations_handoff_20260629.md  k1_d435_risk_vision_deployment_plan_20260701.md  k1_desktop_task_ui_autostart_20260717.md  k1_full_system_protocol_and_logic_20260630.md  k1_hold_capture_mapping_schema_20260702.md  k1_status_and_8day_aggressive_plan_20260630.md  k1_xquant_yolov8_truncated_quantization_20260702.md  k1_yolo_runtime_optimization_plan_20260717.md  k1_yolov8n_onnx_deployment_20260702.md  llm_a_episode_report_input_contract_20260629.md  llm_a_risk_report_baseline_20260629.md  local_llm_report_interface_20260701.md  (+44 more)
firmware/: README.md  WHEELTEC_current.hex  WHEELTEC_tank_pi_reset_20260722.hex  WHEELTEC_tank_pi_reset_20260722.patch  WHEELTEC_tank_safe_stop_20260624.hex
models/: README.md
rl/: train_ppo_mock.py  (+2 more)
ros2_ws/src/k1_event_logger/: package.xml  setup.cfg  setup.py
ros2_ws/src/k1_event_logger/k1_event_logger/: event_logger_node.py
ros2_ws/src/k1_light_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/k1_light_control/k1_light_control/: adaptive_light_controller_node.py  gpio37_light_node.py  pwm7_light_node.py  risk_light_bridge_node.py
ros2_ws/src/k1_risk_engine/: package.xml  setup.cfg  setup.py
ros2_ws/src/k1_risk_engine/k1_risk_engine/: risk_engine_node.py
ros2_ws/src/k1_sensor_event_adapter/: package.xml  setup.cfg  setup.py
ros2_ws/src/k1_sensor_event_adapter/k1_sensor_event_adapter/: camera_low_light_adapter_node.py  scan_event_adapter_node.py  scan_safety_guard_node.py
ros2_ws/src/k1_system_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/k1_system_bringup/launch/: non_arm_bringup.launch.py
ros2_ws/src/turn_on_wheeltec_robot/: CMakeLists.txt  package.xml
ros2_ws/src/turn_on_wheeltec_robot/config/: nav2_n10p_tank_guarded.yaml  nav2_n10p_tank_guarded_map.yaml  nav2_n10p_tank_no_recovery.xml  nav2_n10p_tank_through_poses_no_recovery.xml  slam_toolbox_n10p_tank.yaml  wheeltec_param_back.yaml
ros2_ws/src/turn_on_wheeltec_robot/docs/: tank_base_drive_profile.md
ros2_ws/src/turn_on_wheeltec_robot/include/turn_on_wheeltec_robot/: wheeltec_robot.h
ros2_ws/src/turn_on_wheeltec_robot/launch/: n10p_tank_mapping.launch.py  n10p_tank_mapping_safety_guard.launch.py  n10p_tank_nav2_guarded.launch.py  n10p_tank_nav2_slam.launch.py  tank_base_brake.launch.py  tank_base_safe.launch.py
ros2_ws/src/turn_on_wheeltec_robot/scripts/: chassis_security_keepalive.py  odom_tf_broadcaster.py  wheeltec_tank_base_safe.py
ros2_ws/src/turn_on_wheeltec_robot/src/: wheeltec_robot.cpp
sim/mechanical_arm_1_description/: CMakeLists.txt  README.md  package.xml
sim/mechanical_arm_1_description/config/: arm_display.rviz  joint_names.yaml
sim/mechanical_arm_1_description/launch/: display.launch.py
sim/mechanical_arm_1_description/meshes/: Link2.STL  Link3.STL  base_link.STL
sim/mechanical_arm_1_description/urdf/: mechanical_arm_1_visual.urdf
sim/mechanical_arm_1_moveit_config/: CMakeLists.txt  package.xml
sim/mechanical_arm_1_moveit_config/config/: joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml
sim/mechanical_arm_1_moveit_config/launch/: demo.launch.py
sim/mechanical_arm_1_moveit_config/srdf/: mechanical_arm_1.srdf
sim/tracked_robot_description/: CMakeLists.txt  MODEL_MEASUREMENTS.md  README.md  package.xml
sim/tracked_robot_description/config/: ros2_controllers.yaml  ros_gz_bridge.yaml  sim_mapping.rviz  sim_odom_debug.rviz  slam_toolbox_sim.yaml
sim/tracked_robot_description/docs/: ARM_SEPARATE_SIM_SW2URDF_WORKFLOW.md  CHASSIS_ODOM_NAV2_REFERENCE.md  REAL_VS_SIM_DRIVE_ARCHITECTURE.md  SIMULATION_GAP_ANALYSIS.md  SIMULATION_SCOPE.md  SIM_RISK_APPROACH_RUNBOOK.md  UBUNTU_SIM_DEPLOYMENT_RUNBOOK.md
sim/tracked_robot_description/launch/: display.launch.py  gazebo.launch.py  sim_mapping_safety_guard.launch.py  sim_risk_approach.launch.py
sim/tracked_robot_description/scripts/: odom_path_publisher.py  risk_approach_goal_node.py  sim_risk_marker_detector.py
sim/tracked_robot_description/tools/: create_blender_preview.py  import_gripper_as_one_to_blender.py  import_new_gripper_parts_to_blender.py  import_solidworks_meshes_to_blender.py
sim/tracked_robot_description/urdf/: arm_5dof.xacro  chassis.xacro  common_inertials.xacro  gazebo_plugins.xacro  materials.xacro  sensors.xacro  tracked_robot.urdf.xacro
sim/tracked_robot_description/worlds/: empty_tracked_robot.sdf  slam_hard_maze.sdf  slam_rooms_risk_test.sdf  slam_rooms_test.sdf  slam_test_maze.sdf
tools/realsense_python_binding/: CMakeLists.txt
(+232 files in other folders)
