<?xml version="1.0"?>
<package format="3">
  <name>mechanical_arm_1_description</name>
  <version>0.1.0</version>
  <description>ROS 2 description package for the imported SW2URDF mechanical arm.</description>
  <maintainer email="robot@example.com">robot</maintainer>
  <license>PolyForm-Noncommercial-1.0.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
