<?xml version="1.0"?>
<package format="3">
  <name>mechanical_arm_1_moveit_config</name>
  <version>0.1.0</version>
  <description>Minimal MoveIt2 configuration for mechanical_arm_1 arm-only planning.</description>
  <maintainer email="robot@example.com">robot</maintainer>
  <license>PolyForm-Noncommercial-1.0.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mechanical_arm_1_description</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
