<?xml version="1.0"?>
<package format="3">
  <name>k1_event_logger</name>
  <version>0.1.0</version>
  <description>JSONL event logger for K1 non-arm bring-up tests.</description>
  <maintainer email="team@example.invalid">K1 Robot Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
