<?xml version="1.0"?>
<package format="3">
  <name>k1_light_control</name>
  <version>0.1.0</version>
  <description>GPIO37 light control node for the K1 inspection robot.</description>
  <maintainer email="team@example.invalid">K1 Robot Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
