<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turn_on_wheeltec_robot</name>
  <version>0.0.0</version>
  <description>ROS2 turn_on_wheeltec_robot for wheeltec_robot</description>
  <maintainer email="wheeltec@todo.todo">wheeltec</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>


  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rclpy</depend>
  <depend>serial</depend>
  <depend>nav_msgs</depend>
  <depend>wheeltec_robot_msg</depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>dwb_core</exec_depend>
  <test_depend>boost</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
